# PcWorckSimulator

./: README.md
PcWorkSimulator/: CMakeLists.txt
PcWorkSimulator/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
PcWorkSimulator/src/: gpu.cpp  kbd.cpp  main.cpp
src/: cpu.cpp  disk.cpp
